<resources>
    <string name="app_name">National Parks quizz</string>
    <string name="start">Započni kviz</string>
    <string name="heading">Nacionalni parkovi Hrvatske</string>
    <string name="introHead">Koliko znate o nacionalnim parkovima Hrvatske?</string>
    <string name="introText">Odgovorite na sljedeća pitanja da testirate svoje znanje o prelijepim
        hrvatskim nacionalnim parkovima koja će vas, nadamo se, natjerati da istražite nevjerojatna mjesta koja se nalaze iza ugla. Pa krenimo...</string>
    <string name="pitanje">Pitanje</string>
    <string name="p1">U kojem se NP-u nalazi strogi rezervat prirode Hajdučki i Rožanski kukovi?</string>
    <string name="p2">Koji je najstariji NP u Hrv?</string>
    <string name="p3">U kojem je NP-u nimfa Kalipsa, navodno, privoljela vječnog putnika,
     Odiseja, na višegodišnji ostanak?</string>
    <string name="p4">Od tri otočna NP-a, samo jedan, prikazan na slici, ponosno nosi titulu
    najrazvedenije otočne skupine u Sredozemlju. Koji?</string>
    <string name="p5">Označi sve odgovore koji spadaju u nacionalne parkove?</string>
    <string name="p6">U kojem nacionalnom parku izvire prekrasna rijeka Kupa?</string>
    <string name="p7">U kojem NP-u se nalazi 1431 metara duboka Lukina jama?</string>
    <string name="kraj">Završi</string>
    <string name="brijuni">Brijuni</string>
    <string name="kornati">Kornati</string>
    <string name="krka">Krka</string>
    <string name="mljet">Mljet</string>
    <string name="paklenica">Paklenica</string>
    <string name="plitvicka">Plitvička jezera</string>
    <string name="risnjak">Risnjak</string>
    <string name="sjvel">Sjeverni Velebit</string>
    <string name="rit">Kopački rit</string>
    <string name="biokovo">Biokovo</string>
    <string name="ucka">Učka</string>
    <string name="pag">Pag</string>
</resources>
