<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/introImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/intro" />

        <TextView
            style="@style/introHeading"
            android:text="@string/heading" />

        <TextView
            style="@style/introHead"
            android:id="@+id/introHead"
            android:layout_below="@id/introImage"
            android:text="@string/introHead" />

        <TextView
            style="@style/introText"
            android:layout_below="@id/introHead"
            android:text="@string/introText" />

        <Button
            style="@style/introButton"
            android:id="@+id/introButton"
            android:text="@string/start"
            android:onClick="onClick"/>

    </RelativeLayout>
</ScrollView>
