<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p1" />

            <ImageView
                style="@style/quizImg"
                android:src="@drawable/hajducki" />

            <RadioGroup
                android:id="@+id/radio1"
                style="@style/quizRadioG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/odg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1"
                    android:text="@string/biokovo" />

                <RadioButton
                    android:id="@+id/odg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1"
                    android:text="@string/krka" />

                <RadioButton
                    android:id="@+id/odg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1"
                    android:text="@string/sjvel" />

                <RadioButton
                    android:id="@+id/odg4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1"
                    android:text="@string/kornati" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p2" />

            <RadioGroup
                style="@style/quizRadioG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/odg5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2"
                    android:text="@string/risnjak" />

                <RadioButton
                    android:id="@+id/odg6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2"
                    android:text="@string/paklenica" />

                <RadioButton
                    android:id="@+id/odg7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2"
                    android:text="@string/brijuni" />

                <RadioButton
                    android:id="@+id/odg8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2"
                    android:text="@string/plitvicka" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p3" />

            <EditText
                android:id="@+id/editText1"
                style="@style/quizEdit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p4" />

            <ImageView
                style="@style/quizImg"
                android:src="@drawable/kornati" />

            <RadioGroup
                style="@style/quizRadioG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/odg9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q4"
                    android:text="@string/kornati" />

                <RadioButton
                    android:id="@+id/odg10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q4"
                    android:text="@string/mljet" />

                <RadioButton
                    android:id="@+id/odg11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q4"
                    android:text="@string/brijuni" />

                <RadioButton
                    android:id="@+id/odg12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q4"
                    android:text="@string/pag" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p5" />

            <CheckBox
                android:id="@+id/cb1"
                android:text="@string/biokovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb2"
                android:text="@string/risnjak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb3"
                android:text="@string/paklenica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb4"
                android:text="@string/rit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb5"
                android:text="@string/ucka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:text="@string/brijuni"
                android:id="@+id/cb6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p6" />

            <RadioGroup
                style="@style/quizRadioG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/odg13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6"
                    android:text="@string/plitvicka" />

                <RadioButton
                    android:id="@+id/odg14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6"
                    android:text="@string/krka" />

                <RadioButton
                    android:id="@+id/odg15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6"
                    android:text="@string/risnjak" />

                <RadioButton
                    android:id="@+id/odg16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6"
                    android:text="@string/ucka" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/quizHead"
                android:text="@string/pitanje" />

            <TextView
                style="@style/quizText"
                android:text="@string/p7" />

            <ImageView
                style="@style/quizImg"
                android:src="@drawable/luka" />

            <EditText
                android:id="@+id/editText2"
                style="@style/quizEdit" />

        </LinearLayout>

        <Button
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            style="@style/introButton"
            android:id="@+id/endButton"
            android:text="@string/kraj"
            android:onClick="onClickResult"/>
    </LinearLayout>
</ScrollView>
